--- a/skel/blog/theme/templates/article.html
+++ b/skel/blog/theme/templates/article.html
@@ -1,36 +1,17 @@
 {% extends "base.html" %}
-{% block title %}{{ article.title }}{% endblock %}
-{% block url %}{{ SITEURL }}{{ article.url }}{% endblock %}
+{% block indextitle %}{% endblock %}
 {% block content %}
-<section>
-  <article>
-        <div class="metadata">
-          <h1>
-            <a href="{{ article.url }}" rel="bookmark" title="Permalink to {{ article.title }}">{{ article.title }}</a>
-          </h1>
-          {% include 'twitter.html' %}
-          {% include 'article_infos.html' %}
-        </div>
-
-        <div class="entry-content">
-          {{ article.content }}
-        </div>
-
-        {% if DISQUS_SITENAME %}
-        <div class="comments">
-        <h2>Comments !</h2>
-            <div id="disqus_thread"></div>
-            <script type="text/javascript">
-               var disqus_identifier = "{{ article.url }}";
-               (function() {
-               var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-               dsq.src = 'http://{{ DISQUS_SITENAME }}.disqus.com/embed.js';
-               (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-              })();
-            </script>
-        </div>
+	<div class='article'>
+		<div class="page-header"><h1>{{ article.title }}</h1></div>
+		<div class="well small">{% include "metadata.html" %}</div>
+		<div>{{ article.content }}</div>
+        {% if DISQUS_SITENAME or FACEBOOK_APPID or TWITTER_USERNAME %}
+		<div>
+			<h2>Comments</h2>
+		 	{% include "twitter.html" %}
+			{% if DISQUS_SITENAME %}<div id="disqus_thread"></div>{% endif %}
+			{% if FACEBOOK_APPID %}<div class="fb-comments" data-href="{{ FQ_SITEURL }}/{{ article.url }}" data-num-posts="10" data-width="760"></div>{% endif %}
+		<div>
         {% endif %}
-
-  </article>
-</section>
+	</div>
 {% endblock %}
