--- a/skel/blog/theme/templates/base.html
+++ b/skel/blog/theme/templates/base.html
@@ -1,66 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>{% block title %}{{ SITENAME }}{%endblock%}</title>
-    <meta charset="utf-8" />
-    <link rel="stylesheet" href="{{ SITEURL }}/theme/compiled.css" type="text/css" />
-    {% block head_style %}
-    {% endblock head_style %}
+	<meta charset="utf-8">
+	<title>{% block windowtitle %}{{ SITENAME }}{% endblock %}</title>
+	<meta name="description" content="">
+	<meta name="author" content="{{ AUTHOR }}">
 
-    <link href="{{ SITEURL }}/{{ FEED }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }} ATOM Feed" />
-    {% if FEED_RSS %}
-    <link href="{{ SITEURL }}/{{ FEED_RSS }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }} RSS Feed" />
-    {% endif %}
+	<!-- HTML5 shim, for IE6-8 support of HTML elements -->
+	<!--[if lt IE 9]>
+		<script src="{{ SITEURL }}/theme/html5.js"></script>
+	<![endif]-->
 
-    <!--[if IE]>
-        <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+	<!-- Styles -->
+	<link href="{{ SITEURL }}/theme/bootstrap.min.css" rel="stylesheet">
+	<link href="{{ SITEURL }}/theme/local.css" rel="stylesheet">
+	<link href="{{ SITEURL }}/theme/pygments.css" rel="stylesheet">
 
-    <!--[if lte IE 7]>
-        <link rel="stylesheet" type="text/css" media="all" href="{{ SITEURL }}/css/ie.css"/>
-        <script src="{{ SITEURL }}/js/IE8.js" type="text/javascript"></script><![endif]-->
+	<!-- Feeds -->
+	{% if FEED_ALL_ATOM %}
+	<link href="{{ FEED_DOMAIN }}/{{ FEED_ALL_ATOM }}" type="application/atom+xml" rel="alternate" title="{{ SITENAME }} Atom Feed" />
+	{% endif %}
 
-    <!--[if lt IE 7]>
-        <link rel="stylesheet" type="text/css" media="all" href="{{ SITEURL }}/css/ie6.css"/><![endif]-->
+	{% if FEED_ATOM %}
+        <link href="{{ FEED_ATOM }}" rel="alternate" title="{{ SITENAME }}" type="application/atom+xml">
+	{% endif %}
 
-    <script src="/theme/js/jquery.min.js"></script>
-    {% block script %}
-    {% endblock script %}
+	{% if FEED_ALL_RSS %}
+	<link href="{{ FEED_DOMAIN }}/{{ FEED_ALL_RSS }}" type="application/rss+xml" rel="alternate" title="{{ SITENAME }} RSS Feed" />
+	{% endif %}
 
-    {% include 'analytics.html' %}
+	{% if FEED_RSS %}
+        <link href="{{ FEED_RSS }}" rel="alternate" title="{{ SITENAME }}" type="application/rss+xml">
+	{% endif %}
+
+	{% include "analytics.html" %}
+	{% include "disqus.html" %}
 </head>
-
 <body>
-    <header>
-        <h1><a href="{{ SITEURL }}/">{{ SITENAME }} {% if SITESUBTITLE %} <strong>{{ SITESUBTITLE }}</strong>{% endif %}</a></h1>
-        <div id="web_address">{% block url %}http://imiller.utsc.utoronto.ca{% endblock %}</div>
-        <nav><ul>
-        {% for title, link in MENUITEMS %}
-            <li><a href="{{ link }}">{{ title }}</a></li>
-        {% endfor %}
-        {% if DISPLAY_PAGES_ON_MENU != False %}
-        <li><a href="{{ SITEURL }}/index.html">Home</a></li>
-        {% for p in PAGES %}
-            <li {% if p == page %}class="active"{% endif %}><a href="{{ SITEURL }}/pages/{{ p.url }}">{{ p.title }}</a></li>
-        {% endfor %}
-        {% endif %}
-        {#{% for cat, null in categories %}
-            <li {% if cat == category %}class="active"{% endif %}><a href="{{ SITEURL }}/{{ cat.url }}">{{ cat }}</a></li>
-        {% endfor %}#}
-        <li>
-            <div id="tipue_search_container">
-                <form action="/search.html">
-                    <input value="search" type="text" name="q" id="tipue_search_input" onclick="javascript:$('#tipue_search_input').attr('value', '').css('color', 'black').css('font-style', 'normal');">
-                </form>
-            </div>
-        </li>
-        </ul></nav>
-    </header><!-- /#banner -->
+	{% include "facebook.html" %}
+	{% include "github.html" %}
+	<div class="topbar">
+	  <div class="topbar-inner">
+		<div class="container-fluid">
+		  <a class="brand" href="{{ SITEURL }}/">{{ SITENAME }}</a>
+			<ul class="nav">
+				{% for title, link in MENUITEMS %}
+					<li><a href="{{ link }}">{{ title }}</a></li>
+				{% endfor %}
+				{% if DISPLAY_PAGES_ON_MENU %}
+					{% for page in PAGES %}
+						<li><a href="{{ SITEURL }}/{{ page.url }}">{{ page.title }}</a></li>
+					{% endfor %}
+				{% endif %}
+				{% for cat, null in categories %}
+					<li {% if cat == category %}class="active"{% endif %}><a href="{{ SITEURL }}/{{ cat.url }}">{{ cat }}</a></li>
+				{% endfor %}
+			</ul>
+			<p class="pull-right"><a href="{{ SITEURL }}/archives.html">[archives]</a> <a href="{{ SITEURL }}/tags.html">[tags]</a></p>
+		</div>
+	  </div>
+	</div>
 
-    {% block content %}
-    {% endblock %}
+	<div class="container-fluid">
+	  <div class="sidebar">
+		<div class="well">
+			<h3>Blogroll</h3>
+			<ul>
+				{% for name, link in LINKS %}
+				<li><a href="{{ link }}">{{ name }}</a></li>
+				{% endfor %}
+			</ul>
+			<div class="social">
+			<h3>Social</h3>
+			<ul>
+				{% for name, link in SOCIAL %}
+				<li><a href="{{ link }}">{{ name }}</a></li>
+				{% endfor %}
+			</ul>
+			</div>
+		</div>
+	  </div>
+	  <div class="content">
+			{% block indextitle %}<div class="page-header"><h1>{% block title %} {{ self.windowtitle() }} {% endblock %}</h1></div>{% endblock %}
+			{% block content %}{% endblock %}
+		<footer>
+		  <p>Powered by <a href="http://getpelican.com/">Pelican</a>. Theme based on <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a>.</p>
+		  <p>&copy; {{ AUTHOR }}</p>
+		</footer>
+	  </div>
 
-    <footer>
-        ...
-    </footer>
+	</div>
 </body>
 </html>
