--- a/skel/blog/theme/templates/index.html
+++ b/skel/blog/theme/templates/index.html
@@ -1,70 +1,36 @@
 {% extends "base.html" %}
-{% block content_title %}{% endblock %}
 {% block content %}
+
 {% if articles %}
-    {% for article in articles_page.object_list %}
+{% for article in (articles_page.object_list if articles_page else articles) %}
+<div class='article'>
+	<h2>{{ article.title }}</h2>
+	<div class="well small">{% include "metadata.html" %}</div>
+	<div class="summary">{{ article.summary }} <a class="btn primary xsmall" href="{{ SITEURL }}/{{ article.url }}">more…</a>
+	</div>
+</div>	
+{% endfor %}
+{%endif%}
 
-        {# First item #}
-        {% if loop.first and not articles_page.has_previous() %}
-        <section id="content" class="body">
-            <aside id="featured" class="body">
-                <article>
-                    <div class="metadata">
-                        <h1 class="entry-title"><a href="{{ article.url }}">{{ article.title }}</a></h1>
-                        {% include 'article_infos.html' %}
-                    </div>
-
-                    <div class="entry-content">
-                        {{ article.summary }}
-                        <a class="readmore" href="{{ article.url }}">read more</a>
-                    </div>
-                </article>
-                {% if loop.length == 1 %}
-                    {% include 'pagination.html' %}
-                {% endif %}
-            </aside><!-- /#featured -->
-
-            {% if loop.length > 1 %}
-                    <!--<h1 style="margin: .8em 0">Other articles</h1>-->
-                    <hr />
-                    <ol id="posts-list" class="hfeed">
-            {% endif %}
-        {# other items #}
-        {% else %} 
-            {% if loop.first and articles_page.has_previous %}
-                <section id="content" class="body">
-                    <ol id="posts-list" class="hfeed" start="{{ articles_paginator.per_page -1 }}">
-            {% endif %}
-            <li><article class="hentry">
-                <div class="metadata">
-                    <h1 class="entry-title"><a href="{{ article.url }}" rel="bookmark"
-                           title="Permalink to {{ article.title|striptags }}">{{ article.title }}</a></h1>
-                    {% include 'article_infos.html' %}
-                </div>
-
-                <div class="entry-content">
-                {{ article.summary }}
-                <a class="readmore" href="{{ article.url }}">read more</a>
-                </div><!-- /.entry-content -->
-            </article>
-            <hr>
-            </li>
-        {% endif %}
-        {% if loop.last %}
-            </ol><!-- /#posts-list -->
-            {% if loop.last and (articles_page.has_previous()
-            or not articles_page.has_previous() and loop.length > 1) %}
-                {% include 'pagination.html' %}
-            {% endif %}
-            </section><!-- /#content -->
-        {% endif %}
-    {% endfor %}
-{% else %}
-<section id="content" class="body">
-<h2>Pages</h2>
-    {% for page in PAGES %}
-        <li><a href="{{ page.url }}">{{ page.title }}</a></li>
-    {% endfor %}
-</section>
+{% if articles_page and articles_paginator.num_pages > 1 %}
+<div class="pagination">
+<ul>
+	{% if articles_page.has_previous() %}
+		{% set num = articles_page.previous_page_number() %}
+		<li class="prev"><a href="{{ SITEURL }}/{{ page_name }}{{ num if num > 1 else '' }}.html">&larr; Previous</a></li>
+	{% else %}
+		<li class="prev disabled"><a href="#">&larr; Previous</a></li>
+	{% endif %}
+	{% for num in range( 1, 1 + articles_paginator.num_pages ) %}
+		<li class="{{ 'active' if num == articles_page.number else '' }}"><a href="{{ SITEURL }}/{{ page_name }}{{ num if num > 1 else '' }}.html">{{ num }}</a></li>
+	{% endfor %}
+	{% if articles_page.has_next() %}
+		<li class="next"><a href="{{ SITEURL }}/{{ page_name }}{{ articles_page.next_page_number() }}.html">Next &rarr;</a></li>
+	{% else %}
+		<li class="next disabled"><a href="#">&rarr; Next</a></li>
+	{% endif %}
+</ul>
+</div>
 {% endif %}
-{% endblock content %}
+
+{% endblock %}
