--- a/skel/blog/theme/templates/page.html
+++ b/skel/blog/theme/templates/page.html
@@ -1,11 +1,8 @@
 {% extends "base.html" %}
-{% block title %}{{ page.title }}{% endblock %}
-{% block url %}{{ SITEURL }}{{ page.url }}{% endblock %}
+{% block indextitle %}{% endblock %}
 {% block content %}
-<section>
-	<article>
-	    <h1>{{ page.title }}</h1>
-    	{{ page.content }}
-    </article>
-</section>
+	<div class='page'>
+		<div class="page-header"><h1>{{ page.title }}</h1></div>
+		<div>{{ page.content }}</div>
+	</div>
 {% endblock %}
